tests/algorithms/x/PHP/physics/basic_orbital_capture.out
Fatal error: Cannot redeclare function sqrt() in /workspace/mochi/tests/algorithms/x/PHP/physics/basic_orbital_capture.php on line 36